[package]
name = "dos-tool"
version = "1.0.0"
edition = "2021"
description = "Authorized penetration testing / DoS testing tool"

[[bin]]
name = "dos-tool"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rand = "0.8"
socket2 = "0.5"
ctrlc = "3.4"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
